--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -232,7 +232,7 @@
                                 <a class="nav-link" routerLink="sarscov2">נוגדנים לקורונה</a>
                             </li>
                             <li *ngIf="fastCovidTestPermission">
-                                <a class="nav-link" routerLink="fastcovid19test">בדיקות נוגדנים מהירות</a>
+                                <a class="nav-link" routerLink="fastcovidtestdashboard">בדיקות נוגדנים מהירות</a>
                             </li>
 
                             <li class="nav-item" *ngIf="_shoCoronavaccine">
