--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -269,6 +269,9 @@
             <li class="nav-item" *ngIf="_EmSurgiries">
                 <a class="nav-link" routerLink="urgentsurgeries">ניתוחים דחופים</a>
             </li>
+            <li class="nav-item" *ngIf="_OnlineAppointments">
+                <a class="nav-link" routerLink="onlineappointments">זימון תורים און-לין</a>
+            </li>
             <li class="nav-item">
                 <mat-accordion>
                     <mat-expansion-panel>
