--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+/* angular-cli file: src/styles.css */
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
 /* width */
 /* ::-webkit-scrollbar {
     width: 5px;
@@ -9,6 +11,18 @@ footer {
     padding-bottom: 60px;
 }
 
+.cal-month-view .cal-day-cell:not(:last-child) {
+    border-left: 1px solid  #e1e1e1 !important;
+}
+.btn-group>.btn-group:not(:last-child)>.btn, .btn-group>.btn:not(:last-child):not(.dropdown-toggle),
+.btn-group>.btn-group:not(:first-child)>.btn, .btn-group>.btn:not(:first-child) {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0;
+}
 .highlightBox{
     background: rgba(0,0,0,0.1);
     border-radius: 18px;
