--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,12 @@
             <li class="nav-item" *ngIf="!_shoSofiMenu">
                 <a class="nav-link" routerLink="dashboard">Dashboard</a>
             </li>
+            <!-- <li *ngIf="loginUserName == 'adahabre'">
+                <button id="speechBtn" (mouseup)="stopService()" (mousedown)="startService()" (touchend)="stopService()"
+                    (touchstart)="startService()"><span class="material-icons" style="font-size: 30px;">
+                        mic
+                    </span></button>
+            </li> -->
             <li class="nav-item">
                 <mat-accordion>
                     <mat-expansion-panel>
